--- a/.babelrc
+++ b/.babelrc
@@ -1,25 +1,41 @@
 {
-  "plugins": [
-    "transform-class-properties",
-    "transform-object-rest-spread",
-    "transform-exponentiation-operator",
-    "transform-async-to-generator",
-    "syntax-trailing-function-commas",
-    "transform-inline-environment-variables", [
-      "transform-runtime", {
-        "regenerator": true
-      }
-    ]
-  ],
-
   "parserOpts": {
     // Allow returns in the module
     "allowReturnOutsideFunction": true
   },
 
   "env": {
-    "development": {
+    "ava": {
+      "plugins": [
+        "transform-es2015-modules-commonjs",
+        "transform-class-properties",
+        "transform-object-rest-spread",
+        "transform-exponentiation-operator",
+        "transform-async-to-generator",
+        "syntax-trailing-function-commas",
+        "transform-inline-environment-variables", [
+          "transform-runtime", {
+            "regenerator": true
+          }
+        ]
+      ],
       "sourceMaps": "inline"
+    },
+
+    "rollup": {
+      "plugins": [
+        "transform-es2015-arrow-functions",
+        "transform-class-properties",
+        "transform-object-rest-spread",
+        "transform-exponentiation-operator",
+        "transform-async-to-generator",
+        "syntax-trailing-function-commas",
+        "transform-inline-environment-variables", [
+          "transform-runtime", {
+            "regenerator": true
+          }
+        ]
+      ]
     }
   }
 }
