--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "b2a",
   "version": "1.0.0",
-  "description": "b2a",
+  "description": "btoa and atob support for node.js or old browsers, with the Unicode Problems fixed",
   "main": "lib/index.js",
   "module": "src/index.js",
   "scripts": {
-    "build": "rollup -c",
-    "test": "nyc ava --verbose --timeout=10s",
+    "build": "BABEL_ENV=rollup rollup -c",
+    "test": "BABEL_ENV=ava nyc ava --verbose --timeout=10s",
     "prepublish": "npm run build",
     "report-cov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
@@ -18,7 +18,11 @@
     "url": "git://github.com/kaelzhang/b2a.git"
   },
   "keywords": [
-    "b2a"
+    "btoa",
+    "encode",
+    "decode",
+    "atob",
+    "base64"
   ],
   "engines": {
     "node": ">=4"
@@ -40,16 +44,18 @@
   "devDependencies": {
     "ava": "^0.16.0",
     "babel-cli": "^6.16.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-exponentiation-operator": "^6.8.0",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.24.1",
-    "nyc": "^11.1.0",
     "codecov": "^2.3.0",
+    "nyc": "^11.1.0",
     "rollup": "^0.49.3",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-node-resolve": "^3.0.0"
