--- a/.babelrc
+++ b/.babelrc
@@ -24,6 +24,8 @@
 
     "rollup": {
       "plugins": [
+        "check-es2015-constants",
+        "transform-es2015-block-scoping",
         "transform-es2015-arrow-functions",
         "transform-class-properties",
         "transform-object-rest-spread",
