--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b2a",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "btoa and atob (ie base64 encoding and decoding) support for node.js or old browsers, with the Unicode Problems fixed",
   "main": "lib/index.js",
   "module": "src/index.js",
@@ -44,10 +44,12 @@
   "devDependencies": {
     "ava": "^0.16.0",
     "babel-cli": "^6.16.0",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-exponentiation-operator": "^6.8.0",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
