--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b2a",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "btoa and atob (ie base64 encoding and decoding) support for node.js or old browsers, with the Unicode Problems fixed",
   "main": "lib/index.js",
   "module": "src/index.js",
@@ -22,7 +22,11 @@
     "encode",
     "decode",
     "atob",
-    "base64"
+    "base64",
+    "unicode",
+    "16-bit",
+    "8-bit",
+    "homoglyphs"
   ],
   "engines": {
     "node": ">=4"
