--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b2a",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "btoa and atob (ie base64 encoding and decoding) support for node.js or old browsers, with the Unicode Problems fixed",
   "main": "lib/index.js",
   "module": "src/index.js",
@@ -8,10 +8,12 @@
     "build": "BABEL_ENV=rollup rollup -c",
     "test": "BABEL_ENV=ava nyc ava --verbose --timeout=10s",
     "prepublish": "npm run build",
-    "report-cov": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
+    "report-cov": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "posttest": "npm run report-cov"
   },
   "files": [
-    "lib/"
+    "lib/",
+    "src/"
   ],
   "repository": {
     "type": "git",
@@ -37,7 +39,7 @@
     "url": "https://github.com/kaelzhang/b2a/issues"
   },
   "ava": {
-    "require": "babel-register",
+    "require": "@babel/register",
     "babel": {
       "babelrc": true
     },
@@ -46,24 +48,16 @@
     ]
   },
   "devDependencies": {
-    "ava": "^0.16.0",
-    "babel-cli": "^6.16.0",
-    "babel-plugin-check-es2015-constants": "^6.22.0",
-    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-exponentiation-operator": "^6.8.0",
-    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-register": "^6.24.1",
-    "codecov": "^2.3.0",
-    "nyc": "^11.1.0",
-    "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "@babel/cli": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "ava": "^1.4.1",
+    "codecov": "^3.3.0",
+    "eslint-config-ostai": "^3.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "nyc": "^13.3.0",
+    "rollup": "^1.9.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^4.2.1"
   }
 }
