--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,12 @@
         ]
       ]
     },
+    "es": {
+      "plugins": [
+        "@babel/plugin-transform-arrow-functions",
+        "@babel/plugin-transform-block-scoping"
+      ]
+    },
     "ava": {
       "presets": [
         [
