--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "b2a",
-  "version": "1.1.0",
-  "description": "btoa and atob (ie base64 encoding and decoding) support for node.js or old browsers, with the Unicode Problems fixed",
+  "version": "1.1.1",
+  "description": "btoa and atob (ie base64/base64url encoding and decoding) support for node.js or old browsers, with the Unicode Problems fixed",
   "main": "lib/index.js",
   "module": "es/index.js",
   "scripts": {
@@ -31,6 +31,8 @@
     "decode",
     "atob",
     "base64",
+    "base64url",
+    "base64-url",
     "unicode",
     "16-bit",
     "8-bit",
